# xrootfs

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  go.mod  multitool.lock.json
.bcr/: metadata.template.json
.github/workflows/: publish.yml  tag-and-release.yml  test.yml
cmd/imagecfg/: BUILD.bazel  README.md  image.yml.tpl  main.go  main_test.go
cmd/xrootfs/: BUILD.bazel  main.go
