load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "xrootfs_lib",
    srcs = ["main.go"],
    importpath = "github.com/filmil/xrootfs/cmd/xrootfs",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "xrootfs",
    embed = [":xrootfs_lib"],
    visibility = ["//visibility:public"],
)
