load("//build:my_package_name.bzl", "name_part_from_command_line")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//pkg:zip.bzl", "pkg_zip")

go_library(
    name = "xrootfs_lib",
    srcs = ["main.go"],
    importpath = "github.com/filmil/xrootfs/cmd/xrootfs",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "xrootfs",
    embed = [":xrootfs_lib"],
    visibility = ["//visibility:public"],
)

name_part_from_command_line(
    name = "name_part_from_command_line",
    build_setting_default = "@set_me@",
)

pkg_zip(
    name = "zip",
    srcs = [
        ":xrootfs",
    ],
    package_dir = "xrootfs",
    package_file_name = "xrootfs-{name_part}.zip",
    package_variables = ":name_part_from_command_line",
)
