load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//pkg:zip.bzl", "pkg_zip")

go_library(
    name = "xrootfs_lib",
    srcs = ["main.go"],
    importpath = "github.com/filmil/xrootfs/cmd/xrootfs",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "xrootfs",
    embed = [":xrootfs_lib"],
    visibility = ["//visibility:public"],
)

pkg_zip(
    name = "zip",
    srcs = [
        ":xrootfs",
    ],
    package_dir = "xrootfs",
    package_file_name = "xrootfs-{name_part}.zip",
    package_variables = "//build:name_part_from_command_line",
)
